Fix navbar on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -92,14 +92,14 @@ section h1 {
   }
 
   .navLinksMini {
-    background-color: rgba(200, 196, 196, 0.486);
+    background-color: rgba(0, 0, 0, 0.9);
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 0em;
     margin: 0;
     left: 0;
-    top: 3em;
+    top: 4rem;
     position: fixed;
     align-items: center;
     justify-content: center;
@@ -110,7 +110,7 @@ section h1 {
   }
 
   .open {
-    height: 13em;
+    height: 20rem;
     visibility: visible;
     transition: ease;
     transition-duration: 0.5s;
